# redo

./: Cargo.toml  README.md
.cargo/: config.template
redo-bare/: Cargo.toml
redo-bare-derive/: Cargo.toml
redo-bare-derive/src/: lib.rs
redo-bare/src/: interface.rs  lib.rs  platform.rs  register.rs  sync.rs  time.rs
redo-cpu/: Cargo.toml
redo-cpu/src/: interface.rs  lib.rs
redo-cpu/src/_arch/armv7/: boot.rs  boot.s  cpu.rs  lock.rs  lock.s  memory.rs  smp.rs
redo-kernel/: Cargo.toml
redo-kernel/src/: bare.rs  io.rs  main.rs  memory.rs  time.rs
redo-kernel/src/bare/: boot.rs  panic.rs
redo-kernel/src/io/: console.rs
redo-platform/: Cargo.toml
redo-platform/src/: lib.rs
redo-platform/src/_platform/rpi2/: boot.rs  config.s  console.rs  link.ld  memory.rs  time.rs
