[package]
name = "redo-bare-derive"
version = "0.1.0"
authors = ["Johann Lee <me@qinka.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
redo-bare = {path = "../redo-bare"}
syn = "1.0"
quote = "1.0"
